# DreamTeam

./: README.md  hej hej grabbar.txt
Dteam2test/: platformio.ini
Dteam2test/lib/agent_new/: CMakeLists.txt  action.cpp  action.hpp  calculation.cpp  calculation.hpp  comms.cpp  comms.hpp  information.cpp  information.hpp  node.cpp  node.hpp  oled.cpp  oled.hpp  state.cpp  state.hpp
Dteam2test/src/: main.cpp
dreamteamprototype2/: blablabla  platformio.ini
dreamteamprototype2/lib/LOLIN_OLED_I2C_Button_Library-master/src/: LOLIN_I2C_BUTTON.cpp
dreamteamprototype2/src/: main.cpp
